--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="description" content="Online Monitoring"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/jsInovations.jpg"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <script src="https://cdn.jsdelivr.net/npm/react-apexcharts"></script>
     <title>Ella</title>
